# buildbox

./: .gitignore  BuildBox.hs  README.md  buildbox.cabal
BuildBox/: Benchmark.hs  Build.hs  BuildBox.hs  Cron.hs  Pretty.hs  Property.hs  Testable.hs  Time.hs  buildbox.cabal
BuildBox/Benchmark/: Base.hs  Compare.hs  Pretty.hs  TimeAspect.hs
BuildBox/BuildBox/: Aspect.hs  Benchmark.hs  Build.hs  Cron.hs  Pretty.hs  Quirk.hs  Time.hs
BuildBox/BuildBox/Aspect/: Aspect.hs  Comparison.hs  Detail.hs  Single.hs  Stats.hs  Units.hs
BuildBox/BuildBox/Benchmark/: Aspect.hs  BenchResult.hs  Benchmark.hs  Compare.hs  Pretty.hs  TimeAspect.hs
BuildBox/BuildBox/Benchmark/Aspect/: Mode.hs  Sort.hs  Tagged.hs  Units.hs
BuildBox/BuildBox/Command/: Darcs.hs  Environment.hs  File.hs  Mail.hs  System.hs
BuildBox/BuildBox/Command/System/: Internals.hs
BuildBox/BuildBox/Control/: Gang.hs
BuildBox/BuildBox/Data/: Comparison.hs  Log.hs  Range.hs
BuildBox/BuildBox/FileFormat/: BuildResults.hs
BuildBox/BuildBox/IO/: Directory.hs  File.hs
BuildBox/BuildBox/Reports/: BenchResult.hs
BuildBox/Command/: Environment.hs  File.hs  Mail.hs  Network.hs  Sleep.hs  System.hs  Timing.hs
BuildBox/Command/System/: Internals.hs
BuildBox/Cron/: Schedule.hs
BuildBox/Test/: Main.hs
buildbox/: BuildBox.hs  LICENSE  buildbox.cabal
buildbox-tools/: buildbox-tools.cabal
buildbox-tools/results/: Args.hs  Main.hs
buildbox/BuildBox/: Build.hs  Pretty.hs  Time.hs
buildbox/BuildBox/Command/: Darcs.hs  Environment.hs  File.hs  Mail.hs  Network.hs  Sleep.hs  System.hs
buildbox/BuildBox/Command/System/: Internals.hs
buildbox/BuildBox/Control/: Cron.hs  Gang.hs
buildbox/BuildBox/Data/: Comparison.hs  Detail.hs  Dividable.hs  Log.hs  Physical.hs  Range.hs  Schedule.hs
buildbox/BuildBox/IO/: Directory.hs
examples/: Nightly.hs
examples/repa/: Args.hs  Benchmarks.hs  BuildGhc.hs  BuildRepa.hs  Config.hs  Main.hs  Repa.hs  nightly.sh
foo/: buildbox.cabal
foo/BuildBox/: Time.hs
foo/BuildBox/Data/: Comparison.hs  Detail.hs  Log.hs  Schedule.hs
old/: Benchmark.hs
old/Benchmark/: Comparison.hs  Pretty.hs
