Name:                buildbox
Version:             1.0.0.0
License:             BSD3
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Development, Testing
Homepage:            http://trac.haskell.org/repa
Bug-reports:         http://trac.haskell.org/repa/newticket
Description:
        Reusable components for writing buildbots and test harnesses. Includes functions
        for checking the host platform, running tests, capturing output, handling errors,
        comparing runtimes against a baseline etc.

Synopsis:
        Reusable components for writing buildbots and test harnesses.

Tested-with: GHC == 6.13.20100309, GHC == 6.12.1

Library
  Build-Depends: 
        base                 == 4.*,
        time                 == 1.1.*,
        mtl                  == 1.1.*,
        directory            == 1.0.*,
        process              == 1.0.*,
        unix                 == 2.4.*,
        pretty               == 1.0.*,
        old-locale           == 1.0.*

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -fcpr-off

  Exposed-modules:
        BuildBox.Benchmark.Base
        BuildBox.Benchmark.Pretty
        BuildBox.Benchmark.TimeAspect
        BuildBox.Benchmark
        BuildBox.Build.Base
        BuildBox.Build.Testable
        BuildBox.Build
        BuildBox.Command.Environment
        BuildBox.Command.File
        BuildBox.Command.Network
        BuildBox.Command.System
        BuildBox.Command.Timing
        BuildBox.Pretty
        BuildBox

       