Name:                buildbox
Version:             1.0.0.0
License:             BSD3
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Development, Testing
Homepage:            http://trac.haskell.org/repa
Bug-reports:         http://trac.haskell.org/repa/newticket
Description:
        Rehackable components for writing buildbots and test harnesses. Includes functions
        for checking the host platform, running tests, capturing output, handling errors,
        comparing runtimes against a baseline, sending mail, running events to a schedule etc.

Synopsis:
        Rehackable components for writing buildbots and test harnesses.

Tested-with: GHC == 6.13.20100309, GHC == 6.12.1

Library
  Build-Depends: 
        base                 == 4.*,
        time                 == 1.1.*,
        mtl                  == 1.1.*,
        directory            == 1.0.*,
        process              == 1.0.*,
        unix                 == 2.4.*,
        pretty               == 1.0.*,
        old-locale           == 1.0.*,
        containers           == 0.3.*

  ghc-options:
        -Wall -Werror

  Exposed-modules:
        BuildBox.Benchmark.Base
        BuildBox.Benchmark.Compare
        BuildBox.Benchmark.Pretty
        BuildBox.Benchmark.TimeAspect
        BuildBox.Benchmark
        BuildBox.Build.Base
        BuildBox.Build.Testable
        BuildBox.Build
        BuildBox.Command.Environment
        BuildBox.Command.File
        BuildBox.Command.Mail
        BuildBox.Command.Network
        BuildBox.Command.System
        BuildBox.Command.Sleep
        BuildBox.Cron.Schedule
        BuildBox.Cron
        BuildBox.Pretty
        BuildBox.Time
        BuildBox

       