Name:                buildbox
Version:             2.0.0.0
License:             BSD3
License-file:        LICENSE
Author:              Ben Lippmeier
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Development, Testing
Homepage:            http://code.ouroborus.net/buildbox
Description:
        Includes utilities for checking the host platform, running tests, capturing output,
        handling errors, comparing runtimes against a baseline, sending mail, running events to a schedule etc.

	Some of the Command functions are just wrappers around shell commands, so be careful about passing
	them weirdly formed arguments.
	
Synopsis:
        Rehackable components for writing buildbots and test harnesses.

Tested-with:
        GHC == 7.0.3

Library
  Build-Depends: 
        base           == 4.5.*,
        containers     >= 0.4    && <  0.5,
        time           >= 1.1    && <= 1.4,
        directory      >= 1.0    && <= 1.2,
        mtl            >= 2.0    && <  3.0,
        old-locale     == 1.0.*,
        process        == 1.1.*,
        random         == 1.0.*,
        pretty         == 1.1.*,
        bytestring     == 0.9.*,
        stm            == 2.2.*

  ghc-options:
        -Wall

  Exposed-modules:
        BuildBox
        BuildBox.Build.Testable
        BuildBox.Build.BuildError
        BuildBox.Build.BuildState
        BuildBox.Build
        BuildBox.Command.Darcs
        BuildBox.Command.Environment
        BuildBox.Command.File
        BuildBox.Command.Mail
        BuildBox.Command.Network
        BuildBox.Command.System
        BuildBox.Command.Sleep
        BuildBox.Control.Cron
        BuildBox.Control.Gang
        BuildBox.Data.Log
        BuildBox.Data.Comparison
        BuildBox.Data.Detail
        BuildBox.Data.Dividable
        BuildBox.Data.Range
        BuildBox.Data.Schedule
        BuildBox.Data.Physical
        BuildBox.IO.Directory
        BuildBox.Pretty
        BuildBox.Time

  Other-modules:
        BuildBox.Command.System.Internals
        BuildBox.Build.Base
